@@ -10,6 +10,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class CidadeService {
@@ -17,62 +18,75 @@ public class CidadeService {
     @Autowired
     private CidadeRepository cidadeRepository;
 
-    // Converter para o DTO
-    // Converte Entidade para DTO
-    public static CidadeDTO toDTO(Cidade cidade) {
-        return new CidadeDTO(cidade.getId(), cidade.getNome(), cidade.getCep());
+    // Create
+    public CidadeDTO salvar(CidadeDTO dto) {
+        Cidade cidade = dtoToEntity(dto);
+        Cidade salva = cidadeRepository.save(cidade);
+        return entityToDto(salva);
     }
 
-    // Converte DTO para Entidade
-    public static Cidade toEntity(CidadeDTO cidadeDTO) {
-        return new Cidade(cidadeDTO.getId(), cidadeDTO.getNome(), cidadeDTO.getCep());
+    //Read
+    public CidadeDTO buscarPorId(Long id) {
+        Cidade cidade = cidadeRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Cidade não encontrada"));
+        return entityToDto(cidade);
     }
 
-    public List<CidadeDTO> findAll() {
-
-        List<Cidade> cidades = cidadeRepository.findAll();
-
-        return cidades.stream().map(CidadeService::toDTO).toList(); // Converte para DTO
+    public List<CidadeDTO> buscarTodos() {
+        return cidadeRepository.findAll()
+                .stream()
+                .map(this::entityToDto)
+                .collect(Collectors.toList());
     }
 
-    // Buscar cidade por ID
-    public CidadeDTO findById(@PathVariable Long id) {
-
-        Cidade cidade = cidadeRepository.findById(id).get();
-        return toDTO(cidade);
+    public List<CidadeDTO> buscarPorNome(String nome) {
+        return cidadeRepository.findByNome(nome)
+                .stream()
+                .map(this::entityToDto)
+                .collect(Collectors.toList());
     }
 
-    // Atualizar cidade por ID
-    @Transactional
-    public CidadeDTO update(CidadeDTO cidadeDTO) {
-
-        Cidade cidade = cidadeRepository.findById(cidadeDTO.getId()).get();
-
-        cidade.setNome(cidadeDTO.getNome());
-        cidade.setCep(cidadeDTO.getCep());
-
-        cidadeRepository.save(cidade);
-
-        return findById(cidadeDTO.getId());
+    public List<CidadeDTO> buscarPorCep(String cep) {
+        return cidadeRepository.findByCep(cep)
+                .stream()
+                .map(this::entityToDto)
+                .collect(Collectors.toList());
     }
 
-    // Buscar cidades pelo nome
-    public List<CidadeDTO> findByNome(String nome) {
-        Optional<Cidade> cidades = cidadeRepository.findByNome(nome);
-        return cidades.stream().map(CidadeService::toDTO).toList(); // Converte para DTO
+    // Update
+    public CidadeDTO atualizar(Long id, CidadeDTO dto) {
+        Cidade cidade = cidadeRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Cidade não encontrada"));
+
+        cidade.setNome(dto.getNome());
+        cidade.setCep(dto.getCep());
+
+        Cidade atualizada = cidadeRepository.save(cidade);
+        return entityToDto(atualizada);
     }
 
-    // Criar ou atualizar uma cidade
-    @Transactional
-    public CidadeDTO save(CidadeDTO cidadeDTO) {
-
-        Cidade cidade = cidadeRepository.save(toEntity(cidadeDTO));
-        return toDTO(cidade);
-    }
-
-    // Deletar cidade pelo ID
-    @Transactional
-    public void deleteById(Long id) {
+    // Delete
+    public void deletar(Long id) {
+        if (!cidadeRepository.existsById(id)) {
+            throw new RuntimeException("Cidade não encontrada");
+        }
         cidadeRepository.deleteById(id);
+    }
+
+    // Conversores
+    private Cidade dtoToEntity(CidadeDTO dto) {
+        Cidade cidade = new Cidade();
+        cidade.setId(dto.getId());
+        cidade.setNome(dto.getNome());
+        cidade.setCep(dto.getCep());
+        return cidade;
+    }
+
+    private CidadeDTO entityToDto(Cidade cidade) {
+        CidadeDTO dto = new CidadeDTO();
+        dto.setId(cidade.getId());
+        dto.setNome(cidade.getNome());
+        dto.setCep(cidade.getCep());
+        return dto;
     }
 }
